# ismrmrdviewer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ismrmrdviewer/: __main__.py
ismrmrdviewer/viewer/: ImageViewer.py
src/ismrmrdviewer/ui/: FileWidget.py
src/ismrmrdviewer/viewer/: ImageViewer.py  WaveformViewer.py
